# temporal-infra-maintenance-and-repairs-agent

./: README.md  approve_monitoring_agent.py  mcp_server.py  pyproject.toml  query_monitoring_agent.py  run_monitoring_agent.py  run_monitoring_agent_proactive.py
data/: equipment_life_expectancy.json  health_metrics.json  infrastructure_inventory.json
src/: __init__.py  activities.py  run_worker.py  workflows.py
tests/: __init__.py  test_activities.py  test_all_tools.py  test_integration.py  test_maintenance_pdf.py  test_optimize_configuration.py  test_renew_contract.py  test_repair_pdf.py  test_replace_hardware.py  test_restart_device.py  test_schedule_maintenance.py  test_ui_refresh.py  test_update_firmware.py
ui/: README.md  app.py
ui/components/: __init__.py  alerts.py  equipment_details.py  health_metrics.py  lifecycle.py  overview.py
ui/utils/: __init__.py  calculations.py  data_loader.py
