[tool.poetry]
name = "temporal-infra-maintenance-and-repairs-agent"
version = "0.1.0"
description = "A Python project for temporal infrastructure maintenance and repairs"
authors = ["Josh Smith <josh.smith@temporal.io>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.13.0"  # Added temporalio dependency
requests = "^2.32.3"
flask = "^3.1.1"
dotenv = "^0.9.9"
fastmcp = "^2.8.0"
openai = "^1.86.0"  # Added OpenAI client library
litellm = "^1.72.4"
markdown-pdf = "^1.0.1"
streamlit = "^1.50.0"
pandas = "^2.3.3"
plotly = "^6.3.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"

[tool.poetry.scripts]
temporal-agent = "src.main:main"
run-monitoring-agent = "run_monitoring_agent:main"
run-monitoring-agent-proactive = "run_monitoring_agent_proactive:main"
query-monitoring-agent = "query_monitoring_agent:main"
approve-monitoring-agent = "approve_monitoring_agent:main"
mcp-server = "mcp_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

